<resources>
    <string name="app_name">AMANAK</string>
    <string name="Lo">Login</string>
    <string name="Welcome">Welcome To AMANAK!</string>
    <string name="amanak"> AMANAK</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_"> Enter your credentials to continue</string>
    <string name="nat">National ID or Phone Number</string>
    <string name="pass">Password</string>
    <string name="forg">Forgot Password?</string>
    <string name="don">Don’t have an account?</string>
    <string name="cre">Create Now</string>
    <string name="ID">Enter Your National ID</string>
    <string name="name">Name</string>
    <string name="phone">Enter Your Phone Number</string>
    <string name="pass1">Enter Password</string>
    <string name="pass2">Confirm Password</string>
    <string name="sign">Sign Up</string>
    <string name="have">Have an account?</string>
    <string name="forgot">Forget Password</string>
    <string name="enter">Enter your National ID or Phone to reset your  password</string>
    <string name="contt">Continue</string>
    <string name="wee">We have sent a four digit code to the contact that you provided in the previous step.</string>
    <string name="we">We have sent a four digit code to the contact  that you provided in the previous step.</string>
    <string name="res">Resend code</string>
    <string name="resett">Reset Password</string>
    <string name="enterr">Enter your credentials to continue</string>
    <string name="retype">Retype Password</string>
    <string name="save">Save</string>
    <string name="verfiy">Verify</string>
    <string name="natt">Enter Your National ID</string>
    <string name="IdorP">ID no or Phone Number</string>
    <string name="IDN">Enter Your ID Number</string>
    <string name="RU">Are you a</string>
    <string name="cy">cybercrime victim?</string>
    <string name="rep">Report Now</string>
    <string name="conf">Report with Confidence</string>
    <string name="blogs">Blogs</string>
    <string name="ask">ASK</string>
    <string name="ai">AI</string>
    <string name="succ">Success Stories</string>
    <string name="laws">Laws</string>
    <string name="cat">category</string>
    <string name="catt">Category</string>
    <string name="news">News</string>
    <string name="courses">Courses</string>
    <string name="updates">Updates</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="load_more">Load More ..</string>
    <string name="law">law</string>
    <string name="discover_all_laws">Discover All Laws</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="birth">"Enter Your Birthdate "</string>
    <string name="Privacy">Privacy First</string>
    <string name="priv">Report cybercrimes confidently and anonymously with Amanak. Your privacy is our top priority, ensuring your identity remains protected.</string>
    <string name="chatt">Chat with Experts and Leverage AI: Connect with knowledgeable professionals to get advice and insights through our chat feature for personalized support. At the same time, leverage artificial intelligence for quick answers and smart recommendations tailored to your needs.</string>
    <string name="chat">Expert Chat and AI Support</string>
    <string name="ex">Our experts manage your cases with personalized advice, enhanced by the AI-powered chatbot for quick and intelligent assistance.</string>
    <string name="chattt">Experts and AI Support</string>
    <string name="casee">Case Tracking</string>
    <string name="caseee">You can easily track the status of your cases, stay informed with real-time updates, and receive expert feedback to ensure a smooth and transparent process every step of the way.</string>
    <string name="solve">Solve Cybercrime easily and privately.\n</string>
    <string name="about">"About Amanak "</string>
    <string name="aboutt" />
    <string name="off">Amanak is an official government platform developed by the Jordanian Cybercrime Unit to provide citizens and residents with a secure and confidential way to report cybercrimes. Whether you are facing online fraud, harassment, or any other form of cyber threat, Amanak connects you with legal and technical experts who are dedicated to assisting you every step of the way.</string>
    <string name="too">To ensure the best experience, users are required to create an account with accurate and up-to-date information. As the account holder, you are responsible for safeguarding your login credentials and ensuring the security of your account. All actions performed through your account are under your responsibility. In the event of unauthorized access or a security breach, we urge you to report it immediately to maintain the highest level of privacy and data protection.</string>
    <string name="with">With Amanak, your privacy is our priority. Every report is handled with the utmost confidentiality, empowering you to take action while staying secure and anonymous.</string>
    <string name="terms">Terms and Conditions</string>
    <string name="wel">Welcome to Amanak! By downloading, accessing, or using our application, you agree to comply with the following Terms and Conditions. Please read them carefully.</string>
    <string name="acc">1. Acceptance of Terms\n</string>
    <string name="by">By downloading, accessing, or using Amanak, you agree to be bound by these Terms and Conditions, as well as our Privacy Policy. If you do not agree with any part of these terms, you must not use the app.</string>
    <string name="user">2. User Accounts</string>
    <string name="termss">
To access certain features of the app, you must create an account with valid and accurate information. You are responsible for maintaining the confidentiality of your login credentials. It is your responsibility to ensure that all information provided is accurate, up-to-date, and complete. You are also responsible for all activities that occur under your account. Amanak reserves the right to suspend or terminate your account if there is evidence of unauthorized use, a breach of these terms, or any illegal activity.
</string>
    <string name="settings">Settings</string>
    <string name="useof">3. Use of the App</string>
    <string name="youagree">You agree to use the app in compliance with all applicable laws. You must not use the app for any unlawful or fraudulent activities. You agree not to attempt to hack, disrupt, or compromise the app’s security features. You must not misrepresent your identity or provide inaccurate information. The uploading of viruses, malware, or harmful software that may affect the functionality of the app is prohibited.</string>
    <string name="cra">4. Cybercrime Reporting and Evidence Submission</string>
    <string name="asa">As a user of Amanak, you may have the ability to report cybercrimes and submit evidence. You are solely responsible for the accuracy and legality of any information or evidence you submit. The submission of false or misleading information is strictly prohibited and may result in legal action.</string>
    <string name="data">5. Data Security and Privacy\n</string>
    <string name="weare">We are committed to protecting your privacy and ensuring the security of your data. By using the app, you consent to the collection, processing, and use of your personal data in accordance with our Privacy Policy. We use industry-standard encryption to protect your data. Amanak will not share your personal data with third parties without your consent unless required by law.</string>
    <string name="intt">6. Intellectual Property</string>
    <string name="allcon">All content, designs, trademarks, logos, and software used in the app are owned by Amanak or licensed to us. You may not copy, modify, or distribute any part of the app without our express permission. The use of our trademarks or logos without our consent is prohibited.</string>
    <string name="lim">7. Limitation of Liability</string>
    <string name="isp">Amanak is provided on an “as-is” basis without warranties of any kind, either express or implied. We do not guarantee that the app will always be secure, error-free, or available without interruption. Amanak will not be liable for any damages, including direct, indirect, or incidental damages, arising from the use of the app.</string>
    <string name="changes">8. Changes to Terms</string>
    <string name="reserves">Amanak reserves the right to modify these Terms and Conditions at any time. We will notify users of any significant changes through the app or via email. Continued use of the app after changes to the terms will constitute your acceptance of the new terms.</string>
    <string name="termination">9. Termination</string>
    <string name="wemay">We may terminate or suspend your access to the app at any time, without prior notice or liability, if you breach any of these Terms and Conditions.</string>
    <string name="Governing">10. Governing Law\n</string>
    <string name="these">These Terms and Conditions are governed by and construed in accordance with the laws of The Hashemite Kingdom Of Jordan. Any disputes arising from these terms will be subject to the jurisdiction of the courts in The Hashemite Kingdom Of Jordan.</string>
    <string name="privv">Privacy and Policy</string>
    <string name="atamanak">At AMANAK, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our app. By using Amanak, you agree to the terms outlined below.\n\n</string>
    <string name="wec">We collect personal information such as your name, national ID, phone number, and other details to verify your identity and provide app services. Additionally, we collect usage data, including device information and interactions with the app, to enhance functionality and user experience. Location data may be collected with your consent.\n\n</string>
    <string name="yourinfo">Your information is used to verify your identity, provide app functionality, and communicate with you about your reports and requests. We may also use your data to improve security and analyze trends to optimize the app\'s performance. Your data is never shared with third parties, except in cases of legal compliance or with your consent.\n\n</string>
    <string name="take">We take your data security seriously and implement measures to protect your information. However, no system is completely secure, so we cannot guarantee the absolute protection of your data.\n\n</string>
    <string name="access">You can access, update, or request deletion of your personal data by contacting us. If you\'re under 13, we do not knowingly collect your information, and any data we find will be deleted.\n\n</string>
    <string name="may">We may update this policy occasionally. Continuing to use the app after changes means you accept the revised terms.\n\n</string>
    <string name="my_profile">My Profile</string>
    <string name="my_reports">My Reports</string>
    <string name="success">Success Stories</string>
    <string name="chatttt">Chat</string>
    <string name="language">عربي</string>
</resources>