<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ScrollView to make content scrollable -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <!-- Wrapping content inside a LinearLayout for proper scrolling -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/arrow" />


            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/privv"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/atamanak"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/wec"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/yourinfo"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textVie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/take"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textVi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/access"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/texti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/may"
                android:textColor="#000000"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
