<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="640dp"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cir1" />

        <TextView
            android:id="@+id/amanak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/poppins"
            android:shadowColor="#40000000"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/amanak"
            android:textColor="#385D94"
            android:textSize="52sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome"
            android:textAppearance="@style/welcome"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/enter_your_"
            android:textAppearance="@style/enter_your_"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <EditText
            android:id="@+id/small_label"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/IDN"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#A3A3A3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_your_" />

        <EditText
            android:id="@+id/viewww"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/ID"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#A3A3A3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/small_label" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/calendar"
            android:drawablePadding="10dp"
            android:focusable="false"
            android:fontFamily="@font/poppins"
            android:hint="@string/birth"
            android:inputType="date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#A3A3A3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewww" />

        <Button
            android:id="@+id/button"
            android:layout_width="194dp"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#385D94"
            android:fontFamily="@font/poppins"
            android:text="@string/contt"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDate" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/have"
            android:textColor="#808080"
            app:layout_constraintEnd_toStartOf="@id/textView5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/Lo"
            android:textColor="#385D94"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
